--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
             <version>2.2</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>log4j-over-slf4j</artifactId>
-            <version>1.7.11</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>0.9.29</version>
         </dependency>
         <dependency>
             <groupId>com.github.dkschlos</groupId>
@@ -42,6 +42,7 @@
             <groupId>junit</groupId>
             <artifactId>junit-dep</artifactId>
             <version>4.10</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
